--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+
+
+.Playfair-display{
+    font-family: "Playfair Display", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .Work-Sans{
+    font-family: "Work Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
